--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Simon Game</title>
+  <link rel="stylesheet" href="css/index_style.css">
 </head>
 
 <body>
