--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Simon!23 Game</title>
+  <title>Simon Game</title>
   <link rel="stylesheet" href="css/index_style.css">
 </head>
 
