--- a/index.html
+++ b/index.html
@@ -1,33 +1,35 @@
 <!DOCTYPE html>
-<html lang="en">
-
+<html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Simon Game</title>
+  <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css'>
   <link rel="stylesheet" href="css/index_style.css">
+
 </head>
-
 <body>
-  <div class="info">
-    <h2> Jill's JS Testing Game</h2>
-    <h1> Simon Game</h1>
-    <h3> -Status: Level 1-</h3>
+<!-- partial:index.partial.html -->
+<div class="infos fadeIn animated">
+  <h2>Jill's JS Testing Game</h2>
+  <h1>Simon Game</h1>
+  <h3 class="status">-</h3>
+</div>
+<div class="blocks fadeIn animated">
+  <div class="row">
+    <div class="block block1" onclick="game.userSendInput('1')">1 </div>
+    <div class="block block2" onclick="game.userSendInput('2')">2 </div>
   </div>
-  <div class="blocks">
-    <div class="row">
-      <div class="block block1">1</div>
-      <div class="block block2">2</div>
-    </div>
-    <div class="row">
-      <div class="block block3">3</div>
-      <div class="block block4">4</div>
-    </div>
-    <div class="row">
-      <div class="inputstatus"></div>
-    </div>
+  <div class="row">
+    <div class="block block3" onclick="game.userSendInput('3')">3 </div>
+    <div class="block block4" onclick="game.userSendInput('4')">4</div>
   </div>
-</body>
+  <div class="row">
+    <div class="inputStatus"></div>
+  </div>
+</div>
+<!-- partial -->
+  <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js'></script>
+  <script  src="js/script.js"></script>
 
+</body>
 </html>
