--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 <!-- partial:index.partial.html -->
 <div class="infos fadeIn animated">
-  <h2>Jill's JS Testing Game</h2>
+  <h2>Beta Version</h2>
   <h1>Simon Game</h1>
   <h3 class="status">-</h3>
 </div>
